kubernetes/overlays/local_dev/init_singleuser_image.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: jupyterhub
  name: prepull-singleuser
spec:
  selector:
    matchLabels:
      name: prepull-singleuser
  template:
    metadata:
      labels:
        name: prepull-singleuser
    spec:
      volumes:
      - name: docker
        hostPath:
          path: /var/run
      - name: docker-config
        secret:
          secretName: regcred
          items:
            - key: .dockerconfigjson
              path: config.json
      containers:
      - name: pause
        image: google/pause
