kubernetes/overlays/local_dev/opal_metaflow_metadata.yaml
---
# Source: metaflow/charts/metaflow-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opal-metaflow-service
  labels:
    helm.sh/chart: metaflow-service-0.2.0
    app.kubernetes.io/name: metaflow-service
    app.kubernetes.io/instance: opal
    app.kubernetes.io/version: "2.2.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: metadata
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: upgrades
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app.kubernetes.io/name: metaflow-service
    app.kubernetes.io/instance: opal
---
# Source: metaflow/charts/metaflow-ui/templates/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opal-metaflow-ui
  labels:
    helm.sh/chart: metaflow-ui-0.1.0
    app.kubernetes.io/name: metaflow-ui
    app.kubernetes.io/instance: opal
    app.kubernetes.io/version: "2.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: metaflow-ui
    app.kubernetes.io/instance: opal
---
# Source: metaflow/charts/metaflow-ui/templates/static_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "opal-metaflow-ui-static"
  labels:
    helm.sh/chart: metaflow-ui-0.1.0
    app.kubernetes.io/name: metaflow-ui-static
    app.kubernetes.io/instance: opal
    app.kubernetes.io/version: "2.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: metaflow-ui-static
    app.kubernetes.io/instance: opal
---
# Source: metaflow/charts/metaflow-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opal-metaflow-service
  labels:
    helm.sh/chart: metaflow-service-0.2.0
    app.kubernetes.io/name: metaflow-service
    app.kubernetes.io/instance: opal
    app.kubernetes.io/version: "2.2.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metaflow-service
      app.kubernetes.io/instance: opal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metaflow-service
        app.kubernetes.io/instance: opal
    spec:
      serviceAccountName: opal-metaflow-service
      securityContext:
        {}
      containers:
        - name: metaflow-service
          securityContext:
            {}
          image: "public.ecr.aws/outerbounds/metaflow_metadata_service:2.2.4"
          command: ["/opt/latest/bin/python3", "-m", "services.metadata_service.server" ]
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          resources:
            {}
---
# Source: metaflow/charts/metaflow-ui/templates/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opal-metaflow-ui
  labels:
    helm.sh/chart: metaflow-ui-0.1.0
    app.kubernetes.io/name: metaflow-ui
    app.kubernetes.io/instance: opal
    app.kubernetes.io/version: "2.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metaflow-ui
      app.kubernetes.io/instance: opal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metaflow-ui
        app.kubernetes.io/instance: opal
    spec:
      serviceAccountName: opal-metaflow-ui
      securityContext:
        {}
      containers:
        - name: metaflow-ui
          securityContext:
            {}
          image: "netflixoss/metaflow_metadata_service:2.1.0"
          command: ["/opt/latest/bin/python3", "-m", "services.ui_backend_service.ui_server" ]
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/ping
              port: http
          readinessProbe:
            httpGet:
              path: /api/ping
              port: http
          resources:
            {}
---
# Source: metaflow/charts/metaflow-ui/templates/static_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "opal-metaflow-ui-static"
  labels:
    helm.sh/chart: metaflow-ui-0.1.0
    app.kubernetes.io/name: metaflow-ui-static
    app.kubernetes.io/instance: opal
    app.kubernetes.io/version: "2.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metaflow-ui-static
      app.kubernetes.io/instance: opal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metaflow-ui-static
        app.kubernetes.io/instance: opal
    spec:
      serviceAccountName: opal-metaflow-ui
      securityContext:
        {}
      containers:
        - name: "metaflow-ui-static"
          securityContext:
            {}
          image: "public.ecr.aws/outerbounds/metaflow_ui:v1.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: metaflow/charts/metaflow-service/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "opal-metaflow-service-test-connection"
  labels:
    helm.sh/chart: metaflow-service-0.2.0
    app.kubernetes.io/name: metaflow-service
    app.kubernetes.io/instance: opal
    app.kubernetes.io/version: "2.2.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['opal-metaflow-service:8080']
  restartPolicy: Never
---
# Source: metaflow/charts/metaflow-ui/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "opal-metaflow-ui-test-connection"
  labels:
    helm.sh/chart: metaflow-ui-0.1.0
    app.kubernetes.io/name: metaflow-ui
    app.kubernetes.io/instance: opal
    app.kubernetes.io/version: "2.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['opal-metaflow-ui:8083']
  restartPolicy: Never
