kubernetes/overlays/local_dev/traefik_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  clusterIP: "10.96.30.9"
